[gd_scene load_steps=5 format=3 uid="uid://d1ky1chwvc14f"]

[ext_resource type="Script" uid="uid://qnfpk1bdgxtu" path="res://scenes/menu/menu.gd" id="1_mcvr8"]
[ext_resource type="PackedScene" uid="uid://dtaxgxp33nc50" path="res://scenes/menu/settings_menu.tscn" id="2_e0arn"]
[ext_resource type="AudioStream" uid="uid://cdqay22fodp1k" path="res://audio/music/AudioMenu.mp3" id="3_e0arn"]

[sub_resource type="GDScript" id="GDScript_e0arn"]
script/source = "extends Control

@onready var settings_menu: Control = %SettingsMenu

func _ready():
	show_main_menu()

func show_main_menu():
	self.show()
	settings_menu.hide()

func show_settings():
	settings_menu.show()
	self.hide()

func _on_settings_button_pressed() -> void:
	show_settings()

func _on_back_pressed() -> void:
	show_main_menu()
"

[node name="MenuRoot" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_mcvr8")

[node name="MainMenu" type="Control" parent="."]
unique_name_in_owner = true
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0
script = SubResource("GDScript_e0arn")

[node name="Play" type="Button" parent="MainMenu"]
layout_mode = 0
offset_left = 87.0
offset_top = 39.0
offset_right = 186.0
offset_bottom = 70.0
text = "Play"

[node name="SettingsButton" type="Button" parent="MainMenu"]
layout_mode = 0
offset_left = 81.0
offset_top = 81.0
offset_right = 187.0
offset_bottom = 122.0
text = "Settings"

[node name="Quit" type="Button" parent="MainMenu"]
layout_mode = 0
offset_left = 77.0
offset_top = 128.0
offset_right = 193.0
offset_bottom = 185.0
text = "Quit"

[node name="SettingsMenu" parent="." node_paths=PackedStringArray("Menu") instance=ExtResource("2_e0arn")]
unique_name_in_owner = true
visible = false
layout_mode = 1
Menu = NodePath("../MainMenu")

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("3_e0arn")

[connection signal="pressed" from="MainMenu/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="MainMenu/SettingsButton" to="MainMenu" method="_on_settings_button_pressed"]
[connection signal="pressed" from="MainMenu/Quit" to="." method="_on_quit_pressed"]
